// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render the do variant of the DoDontList component 1`] = `
<div>
  <div
    class="nhsuk-do-dont-list"
  >
    <h2
      class="nhsuk-do-dont-list__label"
    >
      Do
    </h2>
    <ul
      class="nhsuk-list nhsuk-list nhsuk-list--tick"
      role="list"
    >
      <li>
        <svg
          aria-hidden="true"
          class="nhsuk-icon nhsuk-icon__tick"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18.4 7.8l-8.5 8.4L5.6 12"
            stroke="#007f3b"
            stroke-linecap="round"
            stroke-width="4"
          />
        </svg>
        cover blisters that are likely to burst with a soft plaster or dressing
      </li>
      <li>
        <svg
          aria-hidden="true"
          class="nhsuk-icon nhsuk-icon__tick"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18.4 7.8l-8.5 8.4L5.6 12"
            stroke="#007f3b"
            stroke-linecap="round"
            stroke-width="4"
          />
        </svg>
        wash your hands before touching a burst blister
         
      </li>
      <li>
        <svg
          aria-hidden="true"
          class="nhsuk-icon nhsuk-icon__tick"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18.4 7.8l-8.5 8.4L5.6 12"
            stroke="#007f3b"
            stroke-linecap="round"
            stroke-width="4"
          />
        </svg>
        allow the fluid in a burst blister to drain before covering it with a plaster or dressing
         
      </li>
    </ul>
  </div>
</div>
`;

exports[`should render the dont variant of the DoDontList component 1`] = `
<div>
  <div
    class="nhsuk-do-dont-list"
  >
    <h2
      class="nhsuk-do-dont-list__label"
    >
      Don't
    </h2>
    <ul
      class="nhsuk-list nhsuk-list nhsuk-list--cross"
      role="list"
    >
      <li>
        <svg
          aria-hidden="true"
          class="nhsuk-icon nhsuk-icon__cross"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17 18.5c-.4 0-.8-.1-1.1-.4l-10-10c-.6-.6-.6-1.6 0-2.1.6-.6 1.5-.6 2.1 0l10 10c.6.6.6 1.5 0 2.1-.3.3-.6.4-1 .4z"
            fill="#d5281b"
          />
          <path
            d="M7 18.5c-.4 0-.8-.1-1.1-.4-.6-.6-.6-1.5 0-2.1l10-10c.6-.6 1.5-.6 2.1 0 .6.6.6 1.5 0 2.1l-10 10c-.3.3-.6.4-1 .4z"
            fill="#d5281b"
          />
        </svg>
        do not burst a blister yourself
      </li>
      <li>
        <svg
          aria-hidden="true"
          class="nhsuk-icon nhsuk-icon__cross"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17 18.5c-.4 0-.8-.1-1.1-.4l-10-10c-.6-.6-.6-1.6 0-2.1.6-.6 1.5-.6 2.1 0l10 10c.6.6.6 1.5 0 2.1-.3.3-.6.4-1 .4z"
            fill="#d5281b"
          />
          <path
            d="M7 18.5c-.4 0-.8-.1-1.1-.4-.6-.6-.6-1.5 0-2.1l10-10c.6-.6 1.5-.6 2.1 0 .6.6.6 1.5 0 2.1l-10 10c-.3.3-.6.4-1 .4z"
            fill="#d5281b"
          />
        </svg>
        do not peel the skin off a burst blister
      </li>
      <li>
        <svg
          aria-hidden="true"
          class="nhsuk-icon nhsuk-icon__cross"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17 18.5c-.4 0-.8-.1-1.1-.4l-10-10c-.6-.6-.6-1.6 0-2.1.6-.6 1.5-.6 2.1 0l10 10c.6.6.6 1.5 0 2.1-.3.3-.6.4-1 .4z"
            fill="#d5281b"
          />
          <path
            d="M7 18.5c-.4 0-.8-.1-1.1-.4-.6-.6-.6-1.5 0-2.1l10-10c.6-.6 1.5-.6 2.1 0 .6.6.6 1.5 0 2.1l-10 10c-.3.3-.6.4-1 .4z"
            fill="#d5281b"
          />
        </svg>
        do not pick at the edges of the remaining skin
      </li>
      <li>
        <svg
          aria-hidden="true"
          class="nhsuk-icon nhsuk-icon__cross"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17 18.5c-.4 0-.8-.1-1.1-.4l-10-10c-.6-.6-.6-1.6 0-2.1.6-.6 1.5-.6 2.1 0l10 10c.6.6.6 1.5 0 2.1-.3.3-.6.4-1 .4z"
            fill="#d5281b"
          />
          <path
            d="M7 18.5c-.4 0-.8-.1-1.1-.4-.6-.6-.6-1.5 0-2.1l10-10c.6-.6 1.5-.6 2.1 0 .6.6.6 1.5 0 2.1l-10 10c-.3.3-.6.4-1 .4z"
            fill="#d5281b"
          />
        </svg>
        do not wear the shoes or use the equipment that caused your blister until it heals
      </li>
    </ul>
  </div>
</div>
`;
